--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Buat Link PDF</title>
+        <style media="screen">
+            form, .hasil {
+                border: black thin solid;
+                border-radius: 4px;
+                padding: 4px;
+                font: 12px;
+            }
 
+            input {
+                border: red thin solid;
+                width: 80%;
+                padding: 2px;
+                padding-top: 4px;
+                padding-bottom: 4px;
+
+            }
+
+            hr {
+                margin: 10px;
+            }
+        </style>
+    </head>
+    <body>
+
+        <form class="" action="index.html" method="post">
+            <legend>Input:</legend>
+            <br>
+            <br>
+            <input type="text" name="" value="masukan text gambar di sini">
+            <br>
+            <br>
+            <input type="text" name="" value="masukan Link PDF di sini">
+            <br>
+            <br>
+            <button type="button">Buat link dalam gambar!</button>
+        </form>
+        <hr>
+        <div class="hasil">
+            <h4>hasil:</h4>
+            <br>
+            <code id="link-baru">
+
+            </code>
+        </div>
+
+    </body>
+</html>
