--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             hr {
                 margin: 10px;
             }
+
+            @media only screen and (max-width: 600px) {
+                body {
+                    background-color: lightblue;
+                }
+            }
         </style>
     </head>
     <body>
