--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Buat Link PDF</title>
-        <style media="screen">
+        <style>
             form, .hasil {
                 border: black thin solid;
                 border-radius: 4px;
@@ -37,10 +37,10 @@
             <legend>Input:</legend>
             <br>
             <br>
-            <input type="text" name="" value="masukan text gambar di sini">
+            <input type="text" name="" placeholder="masukan text gambar di sini">
             <br>
             <br>
-            <input type="text" name="" value="masukan Link PDF di sini">
+            <input type="text" name="" placeholder="masukan Link PDF di sini">
             <br>
             <br>
             <button type="button">Buat link dalam gambar!</button>
@@ -54,5 +54,11 @@
             </code>
         </div>
 
+        <script type="text/javascript">
+
+            let textGambar,
+                linkPdf;
+
+        </script>
     </body>
 </html>
