--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             }
 
             function turnBackTag(myText) {
-                myText = myText.replace(/&lt;/gi, "<");
-                myText = myText.replace(/&gt;/gi, ">");
+                myText = myText.replace(/&lt;/gi, ">");
+                myText = myText.replace(/&gt;/gi, "<");
 
                 return myText;
             }
