--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
             let tombolLink = document.getElementById('tombolLinkBaru');
 
             function changeTag(myText) {
-                myText = myText.replace(/</gi, "&gt;");
-                myText = myText.replace(/>/gi, "&lt;");
-
+                myText = myText.replace('/gi, '"');
                 return myText;
             }
 
