--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             let tombolLink = document.getElementById('tombolLinkBaru');
 
             function changeTag(myText) {
-                myText = myText.replace('/gi, '"');
+                myText = myText.replace(\'/gi, '"');
                 return myText;
             }
 
