--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <legend>Input:</legend>
             <br>
             <br>
-            <input type="text" id="linkGambar" placeholder="masukan text gambar di sini, contoh: , ambil link DI POST ALL terus ke POST terus ke TEXT">
+            <input type="text" id="linkGambar" placeholder="copas tabel sheet">
             <a href="https://exsol-innovindo.com/wp-admin/edit.php" target="_blank">post all</a>
             <br>
             <br>
