--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             @media only screen and (max-width: 600px) {
                 body {
                     /*background-color: lightblue;*/
+                    max-width: 600px;
                 }
             }
         </style>
