--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 width: auto;
             }
 
-            @media only screen and (max-width: 600px) {
+            @media only screen and (min-width: 600px) {
                 body {
                     /*background-color: lightblue;*/
                     max-width: 600px;
