--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <input type="text" id="linkGambar" placeholder="copas tabel sheet">
             <br>
             <br>
-            <input type="text" id="linkPdf" placeholder="masukan separator">
+            <input type="text" id="linkPdf" placeholder="defaukt ' / masukan separator">
             <br>
             <br>
             <button type="button" id="tombolLinkBaru">Buat link dalam gambar!</button>
