--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <input type="text" id="linkPdf" placeholder="default = ' / masukan separator">
             <br>
             <br>
-            <button type="button" id="tombolLinkBaru">Buat link dalam gambar!</button>
+            <button type="button" id="tombolBuatJson">Buat link dalam gambar!</button>
         </form>
         <hr>
         <div class="hasil">
@@ -70,7 +70,7 @@
 
         <script type="text/javascript">
 
-            let tombolLink = document.getElementById('tombolLinkBaru');
+            let tombolLink = document.getElementById('tombolBuatJson');
 
             function changeTag(myText) {
                 myText = myText.replace(\'/gi, '"');
