--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 return myText;
             }
 
-            function buatLinkBaru() {
+            function buatJson() {
                 let textGambar,
                     linkPdf;
 
@@ -105,7 +105,7 @@
                 navigator.clipboard.writeText(newLink);
             }
 
-            tombolLink.addEventListener("click", BUATLINKB);
+            tombolLink.addEventListener("click", buatJson);
         </script>
     </body>
 </html>
