--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             function copyJson() {
                 let copyText = document.getElementById("myJson");
-                let newLink = turnBackTag(copyText.innerHTML);
+                let 
                 navigator.clipboard.writeText(newLink);
             }
 
