--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             function copyJson() {
                 let copyText = document.getElementById("myJson");
-                
+                let outJson = copyText.innerHTML;
                 navigator.clipboard.writeText(outJson);
             }
 
